--- a/nym-vpn-x/src/i18n/en/errors.json
+++ b/nym-vpn-x/src/i18n/en/errors.json
@@ -23,5 +23,10 @@
     "entry": "Failed to fetch the available entry node countries",
     "exit": "Failed to fetch the available exit node countries"
   },
-  "out-of-bandwidth": "Out of allocated bandwidth"
+  "out-of-bandwidth": "Out of allocated bandwidth",
+  "entry-node-routing": "Entry node is not routing traffic (internet connection down?)",
+  "exit-node": {
+    "routing": "Exit node is not routing {{protocol}} traffic",
+    "ping": "Exit node ping failed for {{protocol}} traffic"
+  }
 }
