refactor nav and snack

--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -152,4 +152,6 @@
 	<string name="always_on_message">Not working? Make sure Always-on VPN is disable for other apps in</string>
 	<string name="vpn_settings">VPN system settings</string>
 	<string name="try_again">and try to reconnect</string>
+	<string name="share">Share</string>
+	<string name="delete">Delete</string>
 </resources>
