--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NymVPN</string>
+	<string name="provider" translatable="false">net.nymtech.nymvpn.provider</string>
     <string name="settings">Settings</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
