android: logs screen changes (#987)
* remove notification permission

* fix: navigation backstack

* add basic logs screen delete modal

* fix: android nightly workflow

* add package build type names

* fix: logs export bug

* bump deps

--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NymVPN</string>
+	<string name="provider" translatable="false">net.nymtech.nymvpn.provider</string>
     <string name="settings">Settings</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
@@ -154,4 +155,8 @@
 	<string name="try_again">and try to reconnect</string>
 	<string name="share">Share</string>
 	<string name="delete">Delete</string>
+	<string name="delete_logs_title">Are you sure you want to delete all logs?</string>
+	<string name="delete_logs_description">Once deleted, the logs will not be recoverable.</string>
+	<string name="no">No</string>
+	<string name="yes">Yes</string>
 </resources>
