Add env vars loading from repo (#1005)

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -595,6 +595,17 @@
         }
       }
     },
+    "generalNymError.noEnvFile" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Env file cannot be found"
+          }
+        }
+      }
+    },
     "generalNymError.noPrebundledCountries" : {
       "extractionState" : "manual",
       "localizations" : {
