don't show 'no credential' vpnd error when a cred is already imported

--- a/nym-vpn-x/src/i18n/en/errors.json
+++ b/nym-vpn-x/src/i18n/en/errors.json
@@ -6,7 +6,7 @@
   },
   "grpc": "Internal gRPC error",
   "connection": {
-    "no-valid-credential": "No valid credential, please add a credential first",
+    "no-valid-credential": "No valid credential found, please add a credential first",
     "timeout": "Connection timeout",
     "mixnet": {
       "timeout": "Mixnet connection timeout",
