--- a/.pkg/linux/install
+++ b/.pkg/linux/install
@@ -35,8 +35,8 @@ BI="$ITL$BLD"
 ####
 
 # nymvpn-x AppImage
-vpnx_tag=nym-vpn-x-nightly
-vpnx_version=0.1.9-dev
+vpnx_tag=nym-vpn-x-v0.1.9
+vpnx_version=0.1.9
 appimage_url="https://github.com/nymtech/nym-vpn-client/releases/download/$vpnx_tag/nymvpn-x_${vpnx_version}.AppImage"
 
 # nym-vpnd prebuilt binary
