improve credential import error messaging

--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -171,4 +171,5 @@
 	<string name="connection_failed">Connection failed</string>
 	<string name="low_bandwidth">"Low bandwidth! Bandwidth remaining: "</string>
 	<string name="vpn_permission_missing">Vpn permission has not been accepted or is being used by another app.</string>
+    <string name="credential_already_imported">Credential already imported.</string>
 </resources>
