Add ability to remove helper tool

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -617,6 +617,28 @@
         }
       }
     },
+    "helper.successfullyUninstalled" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Successfully uninstalled NymVPN helper"
+          }
+        }
+      }
+    },
+    "helper.uninstallHelper" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uninstall NymVPN helper"
+          }
+        }
+      }
+    },
     "home.entryHop" : {
       "extractionState" : "manual",
       "localizations" : {
