feat(vpn-x): delete lang pt, add pt-PT (#1147)

--- a/nym-vpn-x/src/i18n/fa/settings.json
+++ b/nym-vpn-x/src/i18n/fa/settings.json
@@ -21,5 +21,14 @@
   "logs": {
     "title": "گزارش‌ها"
   },
-  "add-credential-button": "افزودن اعتبارنامه برای اتصال"
+  "add-credential-button": "افزودن اعتبارنامه برای اتصال",
+  "entry-selector": {
+    "title": "گزینش‌گر موقعیت ورودی"
+  },
+  "error-monitoring": {
+    "title": "گزارش ناشناس خطا"
+  },
+  "auto-connect": {
+    "title": "اتصال خودکار"
+  }
 }
