--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -205,7 +205,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "To generate a new credential, please use the link\nprovided in the alpha phase invitation email."
+            "value" : "To generate a new credential, please use the link\nprovided in the beta phase invitation email."
           }
         }
       }
@@ -1184,7 +1184,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Help us refine our app during the alpha phase! Your feedback is crucial for identifying and resolving issues. Opt-in for anonymous error monitoring (via"
+            "value" : "Help us refine our app during the beta phase! Your feedback is crucial for identifying and resolving issues. Opt-in for anonymous error monitoring (via"
           }
         }
       }
@@ -1206,7 +1206,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Welcome\nto NymVPN alpha"
+            "value" : "Welcome\nto NymVPN beta"
           }
         }
       }
