--- a/nym-vpn-app/src/i18n/en/add-credential.json
+++ b/nym-vpn-app/src/i18n/en/add-credential.json
@@ -1,9 +1,9 @@
 {
   "welcome": "Welcome!",
-  "description1": "Enter your credential to get started",
-  "description2": "Redeem your credential, then paste or scan the QR code. Don't have one? Sign up at nymvpn.com to get it instantly.",
-  "input-label": "Credential",
-  "add-button": "Add credential",
-  "error": "Invalid credential",
-  "added-notification": "Credential added successfully!"
+  "description1": "Enter your recovery phrase",
+  "description2": "",
+  "input-label": "Recovery phrase",
+  "add-button": "Log in",
+  "error": "Invalid recovery phrase",
+  "added-notification": "Account added successfully!"
 }
