--- a/nym-vpn-app/src/i18n/it/settings.json
+++ b/nym-vpn-app/src/i18n/it/settings.json
@@ -22,7 +22,7 @@
     "policy": "Privacy policy",
     "tos": "Termini di utilizzo"
   },
-  "add-credential-button": "Aggiungi le credenziali per connetterti",
+  "add-account-button": "Aggiungi le credenziali per connetterti",
   "logs": {
     "title": "Logs"
   },
